# MenagerStudiow

./: README.md
Menager_Studiów/: CMakeLists.txt  CMakeUserPresets.json  DataManager.cpp  DataManager.h  Exception.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Student.cpp  Student.h
